--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -149,7 +149,7 @@ You can only create custom versions of {redhat} repositories if you have the cor
 The details you need for this procedure are:
 
 [[redhat-repos-manual]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Red Hat Custom Repository Settings
 |===
 | Option                 | Setting
@@ -168,7 +168,7 @@ include::snippets/manual_repos.adoc[]
 The channels you need for this procedure are:
 
 [[redhat-channels-custom]]
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 .Red Hat Custom Channels
 |===
 | OS Version | Base Product          | Base Channel
@@ -208,7 +208,7 @@ ifeval::[{suma-content} == true]
 The products you need for this procedure are:
 
 [[redhat-channels-wizard]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Red Hat Products - WebUI
 |===
 | OS Version | Product Name
@@ -228,7 +228,7 @@ ifeval::[{uyuni-content} == true]
 The channels you need for this procedure are:
 
 [[redhat-channels-cli]]
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1", options="header",separator=|]
 .Red Hat Channels - CLI
 |===
 
