--- a/modules/quickstart-public-cloud/pages/installation.adoc
+++ b/modules/quickstart-public-cloud/pages/installation.adoc
@@ -49,7 +49,7 @@ Sign in to the {productname} {webui} with the administrator account.
 The username and password varies depending on your provider.
 
 .Default Administrator Account Details
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|,separator=|]
 |===
 | Provider              | Default Username  | Default Password
 | Amazon EC2            | ``admin``         | ``<instance-ID>``
