--- a/modules/reference/pages/admin/bootstrap-script.adoc
+++ b/modules/reference/pages/admin/bootstrap-script.adoc
@@ -8,7 +8,7 @@ The generated script will be placed in [path]``/srv/www/htdocs/pub/bootstrap/`` 
 
 [[bootstrap-script-options]]
 .Bootstrap Script Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 | Option                            | Description   | Default
 | {productname} Server hostname     | The hostname for the {productname} Server to register the client to | Pre-populated
