--- a/modules/reference/pages/schedule/failed-actions.adoc
+++ b/modules/reference/pages/schedule/failed-actions.adoc
@@ -7,7 +7,7 @@ Archive failed actions by checking the action in the list, and clicking btn:[Arc
 
 
 [[actions-list-columns]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Actions List Columns
 |===
 | Column         | Description
