--- a/modules/administration/pages/mgr-sync.adoc
+++ b/modules/administration/pages/mgr-sync.adoc
@@ -17,7 +17,7 @@ mgr-sync [-h] [--version] [-v] [-s] [-d {1,2,3}] {list,add,refresh,delete}
 
 
 [[mgr-sync-commands]]
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 .mgr-sync Commands
 |===
 | Command | Description | Example Use
@@ -38,7 +38,7 @@ mgr-sync <command> --help
 
 
 [[mgr-sync-optional-args]]
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1", options="header",separator=|]
 .mgr-sync Optional Arguments
 |===
 | Option | Abbreviated option | Description | Example Use
