--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -80,7 +80,7 @@ ifeval::[{uyuni-content} == true]
 The channels you need for this procedure are:
 
 [[debian-channels-cli]]
-[cols="1,1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header",separator=|]
 .Debian Channels - CLI
 |===
 
