--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -34,7 +34,7 @@ ifeval::[{suma-content} == true]
 The products you need for this procedure are:
 
 [[ubuntu-channels-wizard]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Ubuntu Products - WebUI
 |===
 | OS Version | Product Name
@@ -47,7 +47,7 @@ Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
 [[ubuntu-channels-cli]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Ubuntu Channels - CLI
 |===
 | OS Version | Base Channel
@@ -63,7 +63,7 @@ ifeval::[{uyuni-content} == true]
 The channels you need for this procedure are:
 // Why are there so many of these?! Maybe better as a bulleted list? Although then it's different to all the others. Sigh. --LKB 2020-06-11
 [[ubuntu-channels-cli-uyuni]]
-[cols="1,1,1,1,1,1,1,1", options="header"]
+[cols="1,1,1,1,1,1,1,1", options="header",separator=|]
 .Ubuntu Channels - CLI
 |===
 
