--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -26,7 +26,7 @@ This table shows the supported features on different client types:
 
 
 .Configuration Management Supported Features
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 | Feature
 | Salt
