--- a/modules/client-configuration/pages/supported-features-sles.adoc
+++ b/modules/client-configuration/pages/supported-features-sles.adoc
@@ -21,7 +21,7 @@ The icons in this table indicate:
 * {salt} the feature is supported only on Salt clients.
 
 
-[cols="1,1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header",separator=|]
 .Supported Features on {suse} and {opensuse} Operating Systems
 |===
 
