--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -29,7 +29,7 @@ The icons in this table indicate:
 // Remove the ifs and the uyuni part when we add the Ubuntu 20.04 there (Leap 15.2 server is require first)
 ifeval::[{suma-content} == true]
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1", options="header",separator=|]
 .Supported Features on {ubuntu} Operating Systems
 |===
 
@@ -255,7 +255,7 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1", options="header",separator=|]
 .Supported Features on {ubuntu} Operating Systems
 |===
 
