--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -31,7 +31,7 @@ The operating system you run on a client is supported by the organization that s
 
 
 [[mgr.supported.clients]]
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1", options="header",separator=|]
 .Supported Client Systems
 |===
 
@@ -181,7 +181,7 @@ The ``spacewalk-utils`` package in {productname}{nbsp}4.1 and later is fully sup
 endif::[]
 
 [[spacewalk-utils]]
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 .Spacewalk Utilities
 |===
 
