--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -94,7 +94,7 @@ Packages for installing {suse} systems are fetched from the autoinstallable dist
 Therefore, for SLES systems, the autoinstallable distribution must be a complete installation source.
 
 .Paths for autoinstallable distributions
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 | Operating System Type | Kernel Location | initrd Location
 | {rhel} | [path]``images/pxeboot/vmlinuz``    | [path]``images/pxeboot/initrd.img``
