--- a/modules/installation/pages/hardware-requirements.adoc
+++ b/modules/installation/pages/hardware-requirements.adoc
@@ -26,7 +26,7 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 
 
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 .Server Hardware Requirements for {x86_64} Architecture
 |===
 
@@ -80,7 +80,7 @@ For more information about inter-server synchronization (ISS), see xref:administ
 
 
 ifeval::[{suma-content} == true]
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 .Server Hardware Requirements for IBM POWER8 or POWER9 Architecture
 |===
 
@@ -138,7 +138,7 @@ endif::[]
 
 == Proxy Hardware Requirements
 
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 .Proxy Hardware Requirements
 |===
 
