--- a/modules/installation/pages/uyuni-install-requirements.adoc
+++ b/modules/installation/pages/uyuni-install-requirements.adoc
@@ -4,7 +4,7 @@
 The following table specifies the minimum requirements.
 // In this table, replace ``version`` with the version of the product you are using.
 
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Software and Hardware Requirements
 |===
 | Software and Hardware  | Recommended
@@ -28,7 +28,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 ////
 
 ////
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 | VirtIO Storage Disks | Name      | Sizing
 | VirtIO Disk 2        | spacewalk | 101{nbsp}GB
