--- a/modules/reference/pages/patches/patches-advanced-search.adoc
+++ b/modules/reference/pages/patches/patches-advanced-search.adoc
@@ -8,7 +8,7 @@ You can search for patches by looking for your search term in different fields:
 
 [[patch-advsearch-options]]
 .Patch Advanced Search Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 | Option         | Description | Example
 | All Fields     | Search in all fields | ``glibc``
