--- a/modules/reference/pages/software/software-channel-list-menu.adoc
+++ b/modules/reference/pages/software/software-channel-list-menu.adoc
@@ -14,7 +14,7 @@ Click the channel name to see more information about the channel.
 Within the menu:Software[Channel List] section you can select which subset of channels you would like to see by navigating to tabs, or the sub-menu items.
 
 [[channel-list-filters]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Channel List Filters
 |===
 | Filter      | Description
